# local-documentation-rag

./: pyproject.toml  requirements.txt
src/: app.py  rag.py
