[tool.poetry]
name = "rag-documentation-assistant"
version = "0.1.0"
description = ""
authors = ["BexTuychiev <bex@ibexprogramming.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
firecrawl-py = "^1.11.1"
langchain-chroma = "^0.2.1"
langchain-community = "^0.3.17"
langchain = "^0.3.18"
langchain-ollama = "^0.2.3"
langchain-text-splitters = "^0.3.6"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
streamlit = "^1.42.0"
unstructured = {extras = ["md"], version = "^0.16.20"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
